--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
+    "opencv": "git+https://github.com/peterbraden/node-opencv.git",
     "socket.io": "^2.0.3",
-    "opencv": "git+https://github.com/peterbraden/node-opencv.git"
+    "usb": "^1.2.0",
+    "usb-detection": "^1.4.0"
   },
   "devDependencies": {
     "eslint-config-rallycoding": "^3.2.0"
