--- a/client/package.json
+++ b/client/package.json
@@ -2,21 +2,17 @@
   "name": "motion",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "react-scripts": "1.0.10"
-  },
   "dependencies": {
     "base64-arraybuffer": "^0.1.5",
     "base64-img": "^1.0.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "socket.io-client": "^2.0.3",
-    "socket.io-react": "^1.2.0"
+    "socket.io-react": "^1.2.0",
+    "express": "^4.15.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node server.js"
   }
 }
+
