--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.4",
     "opencv": "^6.0.0",
     "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "usb": "^1.2.0",
     "usb-detection": "^1.4.0"
   },
